# OCliP

./: .gitignore  OCliP.spec  README.md  impclip.py  pyproject.toml  requirements.txt
