[project]
name = "OCliP"
version = "0.0.2"
description = "A simple app meant to improve the copied clipboard content by running it through an Ollama model."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.7.14",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "keyboard==0.13.5",
    "ollama==0.5.1",
    "pillow==11.3.0",
    "playsound==1.2.2",
    "plyer==2.1.0",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyperclip==1.9.0",
    "pyside6-essentials==6.9.1",
    "pystray==0.19.5",
    "shiboken6==6.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"